objects/Location_Tracker__c.object
<CustomObject>
    <label>Location Tracker</label>
    <nameField>
        <displayFormat>LT-{0000}</displayFormat>
        <label>Location Tracker Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Location Tracker</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Location_Tracker</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Location Tracker</relationshipLabel>
        <relationshipName>Location_Tracker</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>End_Time__c</fullName>
        <label>End Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Start_Time__c</fullName>
        <label>Start Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>End_Location__c</fullName>
        <label>End Location</label>
        <scale>7</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>Calculate_Time__c</fullName>
        <formula>( End_Time__c -  Start_Time__c )* 24* 60</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Calculated Time</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Start_Location__c</fullName>
        <label>Start Location</label>
        <scale>7</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>Calculated_Employee_Time__c</fullName>
        <formula>TEXT(
FLOOR(End_Time__c - Start_Time__c)
) &amp; &quot; Day(s) &quot; &amp;
TEXT(
ROUND(MOD((End_Time__c- Start_Time__c)*24,24),0)
) &amp;&quot; Hour(s) &quot; &amp;
TEXT(
ROUND(MOD((End_Time__c- Start_Time__c)*1440,60),0)
) &amp;&quot; Minute(s) &quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Calculated Employee Time</label>
        <type>Text</type>
    </fields>
</CustomObject>